# ChangeLog for dev-db/mysql
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/mysql/ChangeLog,v 1.487 2009/04/14 03:36:41 darkside Exp $

  14 Apr 2009; Jeremy Olexa <darkside@gentoo.org>
  -mysql-4.1.23_alpha20070101-r61.ebuild:
  remove p.masked version after talking to robbat2 in irc

*mysql-5.0.76-r1 (12 Apr 2009)

  12 Apr 2009; Robin H. Johnson <robbat2@gentoo.org>
  +mysql-5.0.76-r1.ebuild:
  Bug #238487, lots of patching fun to enable building of a shared embedded
  libmysqld for Amarok.

  01 Mar 2009; Raúl Porcel <armin76@gentoo.org> mysql-5.0.70-r1.ebuild:
  s390/sh stable wrt #246652

  28 Feb 2009; Robin H. Johnson <robbat2@gentoo.org> mysql-4.1.22-r1.ebuild,
  mysql-4.1.23_alpha20070101-r61.ebuild:
  Bug #259977: apply the automake patch so that older 4.1 still compiles.

*mysql-5.0.76 (11 Feb 2009)

  11 Feb 2009; Robin H. Johnson <robbat2@gentoo.org> +mysql-5.0.76.ebuild:
  Version bump. Includes new patches for bad whitespace in the HTML encoding
  testcase, plus SIGBUS fixes for sparc. -r1 will contain the Percona
  patchset.

  14 Dec 2008; Tobias Klausmann <klausman@gentoo.org>
  mysql-4.0.27-r1.ebuild, mysql-4.1.22-r1.ebuild,
  mysql-4.1.23_alpha20070101-r61.ebuild:
  Mysql 4 doesn't compile cleanly on alpha (bug 162062) and nothing depends
  on it specifically, so dropping the keyword altogether

  03 Dec 2008; Brent Baude <ranger@gentoo.org> mysql-5.0.70-r1.ebuild,
  mysql-5.0.72-r1.ebuild:
  Marking mysql-5.0.70-r1 ppc64 and mysql-5.0.72-r1 ~ppc64

  03 Dec 2008; Jeroen Roovers <jer@gentoo.org> mysql-5.0.70-r1.ebuild:
  Stable for HPPA (bug #246652).

  01 Dec 2008; Brent Baude <ranger@gentoo.org> mysql-5.0.72-r1.ebuild:
  Marking mysql-5.0.72-r1 ppc64 for bug 246652

  01 Dec 2008; Raúl Porcel <armin76@gentoo.org> mysql-5.0.70-r1.ebuild:
  alpha/arm/ia64/sparc stable wrt #246652
