@@ -18,6 +18,7 @@ DIST mysql-5.0.60.tar.gz 27918671 RMD160 3d7d35e585f96d0729a38146cdb6fdf7308f87b
 DIST mysql-5.0.70.tar.gz 28589887 RMD160 3b3e654518003ddecc0b50afb608dab8754adb3b SHA1 8e0cc8f8ebffad8340f40b9a57dc01a9c5c3b5d7 SHA256 d6532f623cb47100758f554b04ca14d848e3381e9848db899cc6b32dd555b325
 DIST mysql-5.0.72.tar.gz 28710411 RMD160 0f9ad480ceb71af9d4e61ca472aa86a270565c75 SHA1 840c2b30e67b05867e66ee2a9ff9a142d4aabb42 SHA256 784a84b757b581fceb19d4740bbc0ec7b1372ff05efcbffe800286e24e326051
 DIST mysql-5.0.76.tar.gz 34414933 RMD160 acf98699c8d2c67f649d92b579907e8a4155aa94 SHA1 1f4bd01053bcf9c5c417e94bf99938276f6faa17 SHA256 ee4f15cf6f909ab2888f504877af145f2f84a366dbc06a8239045356311dff6d
+DIST mysql-5.0.83.tar.gz 35937401 RMD160 b6a525c865322fb1b796c07d306193a98de37c27 SHA1 5e831a12f1dab902e4af6e3cf495bddf6fa1fd33 SHA256 f7d3ac87693de8d0f4ddf457c268107b0d538a0b577f1c2596a8a28eb0bdd1c4
 DIST mysql-extras-20061210.tar.bz2 51115 RMD160 52355e608d5048c91b7960aa5be0c030ecb0e5d8 SHA1 c9d035ac73d29fe2d1274760ca70b8c6b882fec6 SHA256 46505a8b54ae7cafdc610465edfdfde1cd74f101071f71cf1f5c1c02e92790eb
 DIST mysql-extras-20070105.tar.bz2 50005 RMD160 abf1f8ebab8ecdfdb5ebe9ca55076f39ab492acb SHA1 7f4dbc3d6c20fe953bf6e936a58343a229398ca0 SHA256 17697bf70acffd0eeefd976b5ef06dd36080273bf7e805b51a31d72f5f2c5172
 DIST mysql-extras-20070108.tar.bz2 49996 RMD160 eb7459e2390c4d877f4c4d5cf9bb3d14c39c4212 SHA1 58f8db940a1e524ae1527e9efe9f2c2e1be4ef86 SHA256 55d46ac681036cda8f95d5f169d494cd3c6a25fbc7ec327a949518adf64a8ba8
@@ -33,6 +34,7 @@ DIST mysql-extras-20081129-1041Z.tar.bz2 110743 RMD160 e159b801785109860325e44fc
 DIST mysql-extras-20090211-1206Z.tar.bz2 111217 RMD160 243e1ace611f07f30c148c272d064fc916a47821 SHA1 2ba4041b6749575380fda0e6ae551284aaefcbfc SHA256 9a9a40aac283059492b10ff3dc059a90990dc3b7963405054ead1c750d63d081
 DIST mysql-extras-20090228-2228Z.tar.bz2 254048 RMD160 d71ed448d9fbe61ecc9e4113bd0a7721e8321acb SHA1 9fd9370193e7038067e11cc8a26bfe4013eb6bac SHA256 03a986a5c5ae57f1436553565239613e978ae11e12834fcb275ec6457b12b6fb
 DIST mysql-extras-20090412-0009Z.tar.bz2 256637 RMD160 da0e1bbc6db770171e34c2f58e35f5417ed22f0a SHA1 61c2a15ac6cb34ec2c4b83ac314f6c5d1d3b2ab3 SHA256 9a615dceed183648b1ee83dafbdadfd735a8db312032a871934b63dd847adc42
+DIST mysql-extras-20090706-1838Z.tar.bz2 496474 RMD160 c7a51d7adc21f3befe29641e74a66463fcef01cc SHA1 50831fc861b1c68a08a912df560d920435622630 SHA256 599bf226de7c33e7f01a78f7171f8677a5b38a5b19d371f3a45ba868cb43aec7
 EBUILD mysql-3.23.58-r1.ebuild 7397 RMD160 85c2f6ae75b4d4dc6bb4c3228e4e800a9b20bbdd SHA1 b532250266fb20af81b4b6b9b56d47de048789ce SHA256 9250045fb9af28896c2f266c8c9b33409b525f1481b2ba70d104ec9ba5b4a6d8
 EBUILD mysql-4.0.27-r1.ebuild 1105 RMD160 55f3ea683ea8c57bc2197a64b81b50a0933a57b2 SHA1 0adb182c9cb4640e6f3a1e6b6f501190a3c46067 SHA256 eed1ba3bb284d74483c521b410cb2f165db846eb6f6f0f7bb5218dd8e7cad2ce
 EBUILD mysql-4.1.22-r1.ebuild 1342 RMD160 2aec2ceab698b82b529b613087a05579eab25ed3 SHA1 815a8bc946926b4d1f0f68108d95e4f0d106bfb0 SHA256 ed529ffb30b24c8a8331a9481c6c9ac0a4707e04d7216bc02659d2a648e32fa8
@@ -55,5 +57,6 @@ EBUILD mysql-5.0.72-r1.ebuild 4228 RMD160 777947854d36e754bb7a9ed2378c1d80105ff8
 EBUILD mysql-5.0.72.ebuild 4219 RMD160 a1add74e93dd984f8a9653a6fc53e608b2675cc8 SHA1 65875c2815495fbf145b0f9f7471af193f50b1be SHA256 d8fa074aa6841d80875eead80d22392bd3482c00641812229dc2132f0523ea8b
 EBUILD mysql-5.0.76-r1.ebuild 4767 RMD160 5d89afffb3f0b64f17b034a8872df07b3d8d38fd SHA1 70d59716d736c4d876e04a6a7147613788b257b9 SHA256 c8828a2cc2907cd2aace14b9a660ed893f4f84738a668a8bac6e61ec81f7a852
 EBUILD mysql-5.0.76.ebuild 4766 RMD160 97719cfd24cbcbe72645251cf90070e90af44acd SHA1 18d934e2bb4f520584c0d3c73b3338768cf0c030 SHA256 ec3a5e50be57929419e0b7de9e5d7f7cec4165948b237bd4c93d0e8a09b24b8c
-MISC ChangeLog 93265 RMD160 e6f8fa63fc0ad07afbaf976ab32317f69daa1294 SHA1 3d2cd5a49e852add7fd2d501c7c25fa3d8361559 SHA256 4aa9cc8b185861bc037fc40941f3977d6202dc15ca268478b606df6bdf0f3d2d
-MISC metadata.xml 746 RMD160 24dadde02462666d5b05608b73a87094de82af1a SHA1 596f0628975fc92ff1cb4d665f7fa5d7eac04505 SHA256 070b3c63ddedff2023166fd0f82bd9dc6a691079c10a6ee968ca7b28e97af5a6
+EBUILD mysql-5.0.83.ebuild 4686 RMD160 a1445cdfd063a53edf542900d416970b0f26a340 SHA1 8eed3668992d760d9548a52ee1b00f2bbd7928f4 SHA256 76dd7c7257762ac4a4dc7aaf2ef7cf06235e58afd99d17f0c4fec010018a1f68
+MISC ChangeLog 93560 RMD160 aed909217060a3f8f4ebc5bad40c73ec68eb8d02 SHA1 094ac6939e4d285cc9a65a3bd489a467c7b0c4c2 SHA256 afe9da58bdc9438f929dcf1da932571a792442861d9a34bc52aee3ee074a2e30
+MISC metadata.xml 918 RMD160 ee023d3ae746d0d29ac387c1c87f3f8dec7c9568 SHA1 10ef755d319f93d02de705b3158f4e73aca28af4 SHA256 046a9880921c49fea8861a819c1afd27fc5a873dea28b80b040da2733e029c47
