@@ -1,6 +1,14 @@
 # ChangeLog for dev-db/mysql
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/mysql/ChangeLog,v 1.487 2009/04/14 03:36:41 darkside Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/mysql/ChangeLog,v 1.488 2009/07/06 19:08:59 robbat2 Exp $
+
+*mysql-5.0.83 (06 Jul 2009)
+
+  06 Jul 2009; Robin H. Johnson <robbat2@gentoo.org> +mysql-5.0.83.ebuild,
+  metadata.xml:
+  Version bump for bug 267091. Also fixes bugs: 253917, 271475. Include
+  Percona patchset 5.0.83-b17. USE=community features now available directly
+  and enabled by default.
 
   14 Apr 2009; Jeremy Olexa <darkside@gentoo.org>
   -mysql-4.1.23_alpha20070101-r61.ebuild:
